   and consolidated to one:

   indexDictionary(Dictionary dict, IndexWriterConfig config, boolean optimize)
   
   Previously, there was no way to specify an IndexWriterConfig, and some
   of these methods would sneakily pass 'true' to optimize.  (Robert Muir)
   
 * LUCENE-3558: Moved NRTManager & NRTManagerReopenThread into lucene core 
   o.a.l.search. (Simon Willnauer)

New Features

 * LUCENE-1824: Add BoundaryScanner interface and its implementation classes,
   SimpleBoundaryScanner and BreakIteratorBoundaryScanner, so that FVH's FragmentsBuilder
   can find "natural" boundary to make snippets. (Robert Muir, Koji Sekiguchi)

 * LUCENE-1889: Add MultiTermQuery support for FVH. (Mike Sokolov via Koji Sekiguchi)

 * LUCENE-3458: Change BooleanFilter to have only a single clauses ArrayList
   (so toString() works in order). It now behaves more like BooleanQuery,
   implements Iterable<FilterClause>, and allows adding Filters without
   creating FilterClause.  (Uwe Schindler)

 * LUCENE-3445: Added SearcherManager, to manage sharing and reopening
   IndexSearchers across multiple search threads.  IndexReader's
   refCount is used to safely close the reader only once all threads are done
   using it.  (Michael McCandless)

 * LUCENE-3486: Add SearcherLifetimeManager, to manage retrieving the
   same searcher used in a previous search to ensure follow-on actions
   (next page, drill down, etc.) use the same searcher as before (Mike
   McCandless)

Bug Fixes

 * LUCENE-3417: DictionaryCompoundWordFilter did not properly add tokens from the
   end compound word. (Njal Karevoll via Robert Muir)

 * LUCENE-3019: Fix unexpected color tags for FastVectorHighlighter. (Koji Sekiguchi)

 * LUCENE-3446: Fix NPE in BooleanFilter when DocIdSet/DocIdSetIterator is null.
   Converted code to FixedBitSet and simplified.  (Uwe Schindler, Shuji Umino)
   
 * LUCENE-3484: Fix NPE in TaxonomyWriter: parents array creation was not thread safe.
   (Doron Cohen)
   